--- a/overlays/development/shard-0/jvb-statefulset-patch.yaml
+++ b/overlays/development/shard-0/jvb-statefulset-patch.yaml
@@ -15,8 +15,8 @@ spec:
         shard: "0"
     spec:
       # avoid that pods of different shards share zone
-      nodeSelector:
-        topology.kubernetes.io/zone: ZONE_1
+      # nodeSelector:
+      #   topology.kubernetes.io/zone: ZONE_1
       containers:
         - name: jvb
           env:
