--- a/overlays/development/shard-0/prosody-deployment-patch.yaml
+++ b/overlays/development/shard-0/prosody-deployment-patch.yaml
@@ -10,10 +10,10 @@ spec:
     matchLabels:
       shard: "0"
   template:
-    spec:
-      # avoid that pods of different shards share zone
-      nodeSelector:
-        topology.kubernetes.io/zone: ZONE_1
+    # spec:
+    #   # avoid that pods of different shards share zone
+    #   nodeSelector:
+    #     topology.kubernetes.io/zone: ZONE_1
     metadata:
       labels:
         shard: "0"
