--- a/overlays/development/shard-1/jvb-statefulset-patch.yaml
+++ b/overlays/development/shard-1/jvb-statefulset-patch.yaml
@@ -14,9 +14,9 @@ spec:
         k8s-app: jvb
         shard: "1"
     spec:
-      # avoid that pods of different shards share zone
-      nodeSelector:
-        topology.kubernetes.io/zone: ZONE_2
+      # # avoid that pods of different shards share zone
+      # nodeSelector:
+      #   topology.kubernetes.io/zone: ZONE_2
       containers:
         - name: jvb
           env:
