--- a/overlays/development/shard-1/web-deployment-patch.yaml
+++ b/overlays/development/shard-1/web-deployment-patch.yaml
@@ -8,9 +8,9 @@ metadata:
 spec:
   template:
     spec:
-      # avoid that pods of different shards share zone
-      nodeSelector:
-        topology.kubernetes.io/zone: ZONE_2
+      # # avoid that pods of different shards share zone
+      # nodeSelector:
+      #   topology.kubernetes.io/zone: ZONE_2
       containers:
         - name: web
           env:
