--- a/overlays/development/shard-0/web-deployment-patch.yaml
+++ b/overlays/development/shard-0/web-deployment-patch.yaml
@@ -7,10 +7,7 @@ metadata:
   name: web
 spec:
   template:
-    # spec:
-    #   # avoid that pods of different shards share zone
-    #   nodeSelector:
-    #     topology.kubernetes.io/zone: ZONE_1
+    spec:
       containers:
         - name: web
           env:
